# main

./: File9  File9.cpp  Task1  Task1.cpp  Task10  Task10.cpp  Task11  Task11.cpp  Task12.1  Task12.1.cpp  Task12.2  Task12.2.cpp  Task12.3  Task12.3.cpp  Task2  Task2.cpp  Task3  Task3.cpp  Task4  Task4.cpp  Task5.1  Task5.1.cpp  Task5.cpp  Task6  Task6.cpp  Task7  Task7.cpp  Task8  Task8.cpp  main  main.cpp
OAIP/LR3/: Task  Task1  Task1.cpp  Task2  Task2.cpp  Task3  Task3.cpp  Task4  Task4.cpp  Task4BS.odg  Task4FuncBS.odg  Task5  Task5.cpp  Task5BS.odg  Task6  Task6.cpp  Task7  Task7.cpp  Task8  Task8.cpp  Trash
OAIP/LR4/Task1/: CMakeLists.txt  File1GO  File1GO.cpp  Task1  Task1.cpp  Task1.h  testTask1.cpp  void reverse massive.txt
OAIP/LR4/Task2/: Task2  Task2.cpp  funcTask2.cpp  funcTask2.h  testTask2.cpp
OAIP/LR4/Task3/: CMakeLists.txt  Task3  Task3.cpp  funcTask3.cpp  funcTask3.h  testTask3.cpp
OAIP/LR5/Task1/: CMakeLists.txt  main.cpp  main_static  matrix_functions.cpp  matrix_functions.h  test_matrix_functions.cpp
OAIP/LR5/Task2/: CMakeLists.txt  main.cpp  main_dynamic  massive_functions.cpp  massive_functions.h  test_massive_functions.cpp
OAIP/LR5/Task3/: CMakeLists.txt  main.cpp  main_dynamic  massive_functions.cpp  massive_functions.h  test_massive_functions.cpp
OAIP/LR5/Task4/: CMakeLists.txt  main.cpp  main_dynamic  massive_functions.cpp  massive_functions.h  test_massive_functions.cpp
OAIP/LR5/Task5/: CMakeLists.txt  main.cpp  main_dynamic  massive_functions.cpp  massive_functions.h  test_massive_functions.cpp
OAIP/LR6/Task1/: CMakeLists.txt  Task1  functions.cpp  functions.h  main.cpp  tests.cpp
OAIP/LR6/Task2/: Task2  functions.cpp  functions.h  main.cpp  tests.cpp
OAIP/LR6/Task3/: Task3  functions.cpp  functions.h  main.cpp  tests.cpp
OAIP/LR7/task/: a.out  func.cpp  func.h  main.cpp
OAIP/LabWork4_PartC/Task4/: CMakeLists.txt  Task4  checkC.cpp  checkC.h  funcTask4.cpp  funcTask4.h  testTask4.cpp
OAIP/LabWork4_PartC/Task5/: CMakeLists.txt  Task5  Task5.cpp  checkC.cpp  checkC.h  funcTask5.cpp  funcTask5.h  testTask5.cpp
OAIP/LabWork4_PartC/Task6/: CMakeLists.txt  Task6  Task6.cpp  checkC.cpp  funcTask6.cpp  funcTask6.h  testTask6.cpp
Sharp/LR4/Task/: Classes.cs  Main.cs  Task.sln
